tests/snapshots/formats__dweep__empty.dwp.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ empty.dwp — Dweep level ""  [0x0+0x21a]
    Signature: "Dweep"  [0x0+0x6]
    Copyright: "Copyright © 2000 by Dexterity Software."  [0x6+0x28]
    Title: ""  [0x2e+0x28]
      ! note: bytes after the terminator are not zero: memory the editor never cleared [0x2f+0x27]
    Tip: ""  [0x56+0xc8]
      ! note: bytes after the terminator are not zero: memory the editor never cleared [0x57+0xc7]
  ▾ Board — 16 × 10; Dweep at (0, 0), goal at (1, 0), 0 devices, 0 items  [0x11e+0xa0]
    ▾ Row 0: "DW GO .. .. .. .. .. .. .. .. .. .. .. .. .. .."  [0x11e+0x10]
        (0, 0): Dweep (0x5)  [0x11e+0x1]
        (1, 0): Goal (baby Dweeps) (0x4)  [0x11f+0x1]
        (2, 0): Floor (0x0)  [0x120+0x1]
        (3, 0): Floor (0x0)  [0x121+0x1]
        (4, 0): Floor (0x0)  [0x122+0x1]
        (5, 0): Floor (0x0)  [0x123+0x1]
        (6, 0): Floor (0x0)  [0x124+0x1]
        (7, 0): Floor (0x0)  [0x125+0x1]
        (8, 0): Floor (0x0)  [0x126+0x1]
        (9, 0): Floor (0x0)  [0x127+0x1]
        (10, 0): Floor (0x0)  [0x128+0x1]
        (11, 0): Floor (0x0)  [0x129+0x1]
        (12, 0): Floor (0x0)  [0x12a+0x1]
        (13, 0): Floor (0x0)  [0x12b+0x1]
        (14, 0): Floor (0x0)  [0x12c+0x1]
        (15, 0): Floor (0x0)  [0x12d+0x1]
    ▾ Row 1: ".. .. .. .. .. .. .. .. .. .. .. .. .. .. .. .."  [0x12e+0x10]
        (0, 1): Floor (0x0)  [0x12e+0x1]
        (1, 1): Floor (0x0)  [0x12f+0x1]
        (2, 1): Floor (0x0)  [0x130+0x1]
        (3, 1): Floor (0x0)  [0x131+0x1]
        (4, 1): Floor (0x0)  [0x132+0x1]
        (5, 1): Floor (0x0)  [0x133+0x1]
        (6, 1): Floor (0x0)  [0x134+0x1]
        (7, 1): Floor (0x0)  [0x135+0x1]
        (8, 1): Floor (0x0)  [0x136+0x1]
        (9, 1): Floor (0x0)  [0x137+0x1]
        (10, 1): Floor (0x0)  [0x138+0x1]
        (11, 1): Floor (0x0)  [0x139+0x1]
        (12, 1): Floor (0x0)  [0x13a+0x1]
        (13, 1): Floor (0x0)  [0x13b+0x1]
        (14, 1): Floor (0x0)  [0x13c+0x1]
        (15, 1): Floor (0x0)  [0x13d+0x1]
    ▾ Row 2: ".. .. .. .. .. .. .. .. .. .. .. .. .. .. .. .."  [0x13e+0x10]
        (0, 2): Floor (0x0)  [0x13e+0x1]
        (1, 2): Floor (0x0)  [0x13f+0x1]
        (2, 2): Floor (0x0)  [0x140+0x1]
        (3, 2): Floor (0x0)  [0x141+0x1]
        (4, 2): Floor (0x0)  [0x142+0x1]
        (5, 2): Floor (0x0)  [0x143+0x1]
        (6, 2): Floor (0x0)  [0x144+0x1]
        (7, 2): Floor (0x0)  [0x145+0x1]
        (8, 2): Floor (0x0)  [0x146+0x1]
        (9, 2): Floor (0x0)  [0x147+0x1]
        (10, 2): Floor (0x0)  [0x148+0x1]
        (11, 2): Floor (0x0)  [0x149+0x1]
        (12, 2): Floor (0x0)  [0x14a+0x1]
        (13, 2): Floor (0x0)  [0x14b+0x1]
        (14, 2): Floor (0x0)  [0x14c+0x1]
        (15, 2): Floor (0x0)  [0x14d+0x1]
    ▾ Row 3: ".. .. .. .. .. .. .. .. .. .. .. .. .. .. .. .."  [0x14e+0x10]
        (0, 3): Floor (0x0)  [0x14e+0x1]
        (1, 3): Floor (0x0)  [0x14f+0x1]
        (2, 3): Floor (0x0)  [0x150+0x1]
        (3, 3): Floor (0x0)  [0x151+0x1]
        (4, 3): Floor (0x0)  [0x152+0x1]
        (5, 3): Floor (0x0)  [0x153+0x1]
        (6, 3): Floor (0x0)  [0x154+0x1]
        (7, 3): Floor (0x0)  [0x155+0x1]
        (8, 3): Floor (0x0)  [0x156+0x1]
        (9, 3): Floor (0x0)  [0x157+0x1]
        (10, 3): Floor (0x0)  [0x158+0x1]
        (11, 3): Floor (0x0)  [0x159+0x1]
        (12, 3): Floor (0x0)  [0x15a+0x1]
        (13, 3): Floor (0x0)  [0x15b+0x1]
        (14, 3): Floor (0x0)  [0x15c+0x1]
        (15, 3): Floor (0x0)  [0x15d+0x1]
    ▾ Row 4: ".. .. .. .. .. .. .. .. .. .. .. .. .. .. .. .."  [0x15e+0x10]
        (0, 4): Floor (0x0)  [0x15e+0x1]
        (1, 4): Floor (0x0)  [0x15f+0x1]
        (2, 4): Floor (0x0)  [0x160+0x1]
        (3, 4): Floor (0x0)  [0x161+0x1]
        (4, 4): Floor (0x0)  [0x162+0x1]
        (5, 4): Floor (0x0)  [0x163+0x1]
        (6, 4): Floor (0x0)  [0x164+0x1]
        (7, 4): Floor (0x0)  [0x165+0x1]
        (8, 4): Floor (0x0)  [0x166+0x1]
        (9, 4): Floor (0x0)  [0x167+0x1]
        (10, 4): Floor (0x0)  [0x168+0x1]
        (11, 4): Floor (0x0)  [0x169+0x1]
        (12, 4): Floor (0x0)  [0x16a+0x1]
        (13, 4): Floor (0x0)  [0x16b+0x1]
        (14, 4): Floor (0x0)  [0x16c+0x1]
        (15, 4): Floor (0x0)  [0x16d+0x1]
    ▾ Row 5: ".. .. .. .. .. .. .. .. .. .. .. .. .. .. .. .."  [0x16e+0x10]
        (0, 5): Floor (0x0)  [0x16e+0x1]
        (1, 5): Floor (0x0)  [0x16f+0x1]
        (2, 5): Floor (0x0)  [0x170+0x1]
        (3, 5): Floor (0x0)  [0x171+0x1]
        (4, 5): Floor (0x0)  [0x172+0x1]
        (5, 5): Floor (0x0)  [0x173+0x1]
        (6, 5): Floor (0x0)  [0x174+0x1]
        (7, 5): Floor (0x0)  [0x175+0x1]
        (8, 5): Floor (0x0)  [0x176+0x1]
        (9, 5): Floor (0x0)  [0x177+0x1]
        (10, 5): Floor (0x0)  [0x178+0x1]
        (11, 5): Floor (0x0)  [0x179+0x1]
        (12, 5): Floor (0x0)  [0x17a+0x1]
        (13, 5): Floor (0x0)  [0x17b+0x1]
        (14, 5): Floor (0x0)  [0x17c+0x1]
        (15, 5): Floor (0x0)  [0x17d+0x1]
    ▾ Row 6: ".. .. .. .. .. .. .. .. .. .. .. .. .. .. .. .."  [0x17e+0x10]
        (0, 6): Floor (0x0)  [0x17e+0x1]
        (1, 6): Floor (0x0)  [0x17f+0x1]
        (2, 6): Floor (0x0)  [0x180+0x1]
        (3, 6): Floor (0x0)  [0x181+0x1]
        (4, 6): Floor (0x0)  [0x182+0x1]
        (5, 6): Floor (0x0)  [0x183+0x1]
        (6, 6): Floor (0x0)  [0x184+0x1]
        (7, 6): Floor (0x0)  [0x185+0x1]
        (8, 6): Floor (0x0)  [0x186+0x1]
        (9, 6): Floor (0x0)  [0x187+0x1]
        (10, 6): Floor (0x0)  [0x188+0x1]
        (11, 6): Floor (0x0)  [0x189+0x1]
        (12, 6): Floor (0x0)  [0x18a+0x1]
        (13, 6): Floor (0x0)  [0x18b+0x1]
        (14, 6): Floor (0x0)  [0x18c+0x1]
        (15, 6): Floor (0x0)  [0x18d+0x1]
    ▾ Row 7: ".. .. .. .. .. .. .. .. .. .. .. .. .. .. .. .."  [0x18e+0x10]
        (0, 7): Floor (0x0)  [0x18e+0x1]
        (1, 7): Floor (0x0)  [0x18f+0x1]
        (2, 7): Floor (0x0)  [0x190+0x1]
        (3, 7): Floor (0x0)  [0x191+0x1]
        (4, 7): Floor (0x0)  [0x192+0x1]
        (5, 7): Floor (0x0)  [0x193+0x1]
        (6, 7): Floor (0x0)  [0x194+0x1]
        (7, 7): Floor (0x0)  [0x195+0x1]
        (8, 7): Floor (0x0)  [0x196+0x1]
        (9, 7): Floor (0x0)  [0x197+0x1]
        (10, 7): Floor (0x0)  [0x198+0x1]
        (11, 7): Floor (0x0)  [0x199+0x1]
        (12, 7): Floor (0x0)  [0x19a+0x1]
        (13, 7): Floor (0x0)  [0x19b+0x1]
        (14, 7): Floor (0x0)  [0x19c+0x1]
        (15, 7): Floor (0x0)  [0x19d+0x1]
    ▾ Row 8: ".. .. .. .. .. .. .. .. .. .. .. .. .. .. .. .."  [0x19e+0x10]
        (0, 8): Floor (0x0)  [0x19e+0x1]
        (1, 8): Floor (0x0)  [0x19f+0x1]
        (2, 8): Floor (0x0)  [0x1a0+0x1]
        (3, 8): Floor (0x0)  [0x1a1+0x1]
        (4, 8): Floor (0x0)  [0x1a2+0x1]
        (5, 8): Floor (0x0)  [0x1a3+0x1]
        (6, 8): Floor (0x0)  [0x1a4+0x1]
        (7, 8): Floor (0x0)  [0x1a5+0x1]
        (8, 8): Floor (0x0)  [0x1a6+0x1]
        (9, 8): Floor (0x0)  [0x1a7+0x1]
        (10, 8): Floor (0x0)  [0x1a8+0x1]
        (11, 8): Floor (0x0)  [0x1a9+0x1]
        (12, 8): Floor (0x0)  [0x1aa+0x1]
        (13, 8): Floor (0x0)  [0x1ab+0x1]
        (14, 8): Floor (0x0)  [0x1ac+0x1]
        (15, 8): Floor (0x0)  [0x1ad+0x1]
    ▾ Row 9: ".. .. .. .. .. .. .. .. .. .. .. .. .. .. .. .."  [0x1ae+0x10]
        (0, 9): Floor (0x0)  [0x1ae+0x1]
        (1, 9): Floor (0x0)  [0x1af+0x1]
        (2, 9): Floor (0x0)  [0x1b0+0x1]
        (3, 9): Floor (0x0)  [0x1b1+0x1]
        (4, 9): Floor (0x0)  [0x1b2+0x1]
        (5, 9): Floor (0x0)  [0x1b3+0x1]
        (6, 9): Floor (0x0)  [0x1b4+0x1]
        (7, 9): Floor (0x0)  [0x1b5+0x1]
        (8, 9): Floor (0x0)  [0x1b6+0x1]
        (9, 9): Floor (0x0)  [0x1b7+0x1]
        (10, 9): Floor (0x0)  [0x1b8+0x1]
        (11, 9): Floor (0x0)  [0x1b9+0x1]
        (12, 9): Floor (0x0)  [0x1ba+0x1]
        (13, 9): Floor (0x0)  [0x1bb+0x1]
        (14, 9): Floor (0x0)  [0x1bc+0x1]
        (15, 9): Floor (0x0)  [0x1bd+0x1]
  ▾ Starting inventory — empty  [0x1be+0x50]
    ▾ Slot 0 — never used: the game numbers slots from 1  [0x1be+0x8]
        Type: 0x0 (unknown)  [0x1be+0x4]
        Variant: 0  [0x1c2+0x4]
    ▾ Slot 1: "empty"  [0x1c6+0x8]
        Type: empty (0x9)  [0x1c6+0x4]
        Variant: 0  [0x1ca+0x4]
    ▾ Slot 2: "empty"  [0x1ce+0x8]
        Type: empty (0x9)  [0x1ce+0x4]
        Variant: 0  [0x1d2+0x4]
    ▾ Slot 3: "empty"  [0x1d6+0x8]
        Type: empty (0x9)  [0x1d6+0x4]
        Variant: 0  [0x1da+0x4]
    ▾ Slot 4: "empty"  [0x1de+0x8]
        Type: empty (0x9)  [0x1de+0x4]
        Variant: 0  [0x1e2+0x4]
    ▾ Slot 5: "empty"  [0x1e6+0x8]
        Type: empty (0x9)  [0x1e6+0x4]
        Variant: 0  [0x1ea+0x4]
    ▾ Slot 6: "empty"  [0x1ee+0x8]
        Type: empty (0x9)  [0x1ee+0x4]
        Variant: 0  [0x1f2+0x4]
    ▾ Slot 7: "empty"  [0x1f6+0x8]
        Type: empty (0x9)  [0x1f6+0x4]
        Variant: 0  [0x1fa+0x4]
    ▾ Slot 8: "empty"  [0x1fe+0x8]
        Type: empty (0x9)  [0x1fe+0x4]
        Variant: 0  [0x202+0x4]
    ▾ Slot 9: "empty"  [0x206+0x8]
        Type: empty (0x9)  [0x206+0x4]
        Variant: 0  [0x20a+0x4]
    Unused: 00 00 00 00 00 00 00 00  |........|  [0x20e+0x8]
    Theme: Theme 1 (wood) (0x0)  [0x216+0x4]
